# matrix

./: CMakeLists.txt  main.cpp  matrix.cpp
include/: matrix.h  matrix_templated.h
